For Educational Purposes Only!!!!

--- a/earn.html
+++ b/earn.html
@@ -26,7 +26,7 @@
 
     <!-- Binance Logo -->
     <div style="text-align: center; padding: 16px;">
-      <img src="https://public.bnbstatic.com/static/images/common/logo.png" alt="Binance" style="height: 32px;" onerror="this.src='data:image/svg+xml;utf8,<svg xmlns=\'http://www.w3.org/2000/svg\' width=\'120\' height=\'32\' viewBox=\'0 0 120 32\'><rect fill=\'%23F0B90B\' width=\'120\' height=\'32\' rx=\'4\'/><text x=\'60\' y=\'20\' font-family=\'Arial\' font-size=\'14\' font-weight=\'bold\' fill=\'%23000\' text-anchor=\'middle\'>Binance</text></svg>'">
+      <img src="img/crypto-article.png" alt="Binance" style="height: 32px;" onerror="this.src='data:image/svg+xml;utf8,<svg xmlns=\'http://www.w3.org/2000/svg\' width=\'120\' height=\'32\' viewBox=\'0 0 120 32\'><rect fill=\'%23F0B90B\' width=\'120\' height=\'32\' rx=\'4\'/><text x=\'60\' y=\'20\' font-family=\'Arial\' font-size=\'14\' font-weight=\'bold\' fill=\'%23000\' text-anchor=\'middle\'>Binance</text></svg>'">
     </div>
 
     <!-- Earn Section -->
